# workspace-mcp

./: .editorconfig  .env.example  README.md  biome.json  justfile  mise.toml  package.json  tsconfig.json
scripts/: workspaces-run.ts
server/: .gitignore  Cargo.toml
server/public/: index.html
server/src/: lib.rs  main.rs
server/src/app/: constants.rs  mod.rs  oauth.rs  router.rs  simple_oauth.rs
server/src/file_manager/: file_manager.rs  mod.rs
server/src/workspace_manager/: mod.rs  types.rs  workspace_manager.rs
server/templates/: oauth.html
vscode/: biome.json  package.json  tsconfig.build.json  tsconfig.json
vscode/src/: index.ts
