[package]
name = "server"
description = "Workspace MCP server."
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-stream = "0.3.6"
axum = { version = "0.8.4", features = ["macros", "json", "http1", "http2"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
dunce = "1.0.5"
headers = "0.4.1"
rmcp = { version = "0.5.0", features = [
  "auth",
  "macros",
  "server",
  "transport-io",
  "transport-sse-server",
  "transport-streamable-http-server",
  "transport-worker",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
